--- a/src/ToDoItem.css
+++ b/src/ToDoItem.css
@@ -1,30 +1,42 @@
 .todo-item {
-    margin-bottom: 15px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-  }
-  
-  .todo-item.completed {
-    background-color: #cacaca; 
-  }
-  
-  .complete-checkbox {
-    margin-top: 10px;
-  }
-  
-  .todo-item h3 {
-    margin-bottom: 10px;
-  }
-  
-  .todo-item p {
-    margin-bottom: 5px;
-  }
-  
-  .complete-checkbox input[type="checkbox"] {
-    margin-left: 5px;
-    cursor: pointer;
-  }
-  
-  
+  margin-bottom: 15px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #fff;
+}
+
+.todo-item.completed {
+  background-color: #cacaca; 
+}
+
+.complete-checkbox {
+  margin-top: 10px;
+}
+
+.todo-item h3 {
+  margin-bottom: 10px;
+}
+
+.todo-item p {
+  margin-bottom: 5px;
+}
+
+.complete-checkbox input[type="checkbox"] {
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.delete-button {
+  background-color: #ff3333;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  padding: 5px 10px;
+  margin-top: 10px;
+}
+
+.delete-button:hover {
+  background-color: #ff0000;
+}
